# docx-simplifier

./: README.md  pyproject.toml
docx_simplifier/: __init__.py  __main__.py  cli.py  constants.py  core.py  gui.py  levels.py  utils.py
tests/: __init__.py  test_constants.py  test_core.py  test_integration.py  test_levels.py  test_performance.py  test_utils.py
